@@ -68,6 +68,15 @@
                     <a id="github" onclick="toggle_account(this)">GitHub</a>
                 </li>
                 <li class="entry">
+                    <a id="hardlimit" onclick="toggle_children(this)">Hardlimit</a>
+                </li>
+                <li class="entry-hardlimit child-entry" style="display:none;">
+                    <a id="hardlimit-main" onclick="toggle_account(this)">Main</a>
+                </li>
+                <li class="entry-hardlimit child-entry" style="display:none;">
+                    <a id="hardlimit-archive" onclick="toggle_account(this)">Stream Archive</a>
+                </li>
+                <li class="entry">
                     <a id="linuxquestions" onclick="toggle_account(this)">LinuxQuestions</a>
                 </li>
                 <li class="entry">
