@@ -1,5 +1,6 @@
 UNRELEASED:
 
+- Added 'Hardlimit' accounts to the Accounts page.
 - Fixed 'Go to account' button for NexusMods directing to a specific mod instead of my account profile.
 
 2022-04-18:
